--- a/Asset/css/style.css
+++ b/Asset/css/style.css
@@ -14,14 +14,15 @@
       background: #F5F5F5;
       margin: 0;
       padding:0;
-      font-family: 'geomatric';
+      font-family: 'geomatric', 'inter';
+      box-sizing: border-box;
     }
 
   #header {
     background-image: url("../../image/header.png");
     background-repeat: no-repeat;
     background-attachment:inherit;
-    background-position:top ;
+    background-position:top;
   }
 
   .wrapper {
@@ -63,14 +64,14 @@
 
   nav.scrollink-active {
     background-color: #02203B;
-    padding:0 10px 0 10px;
+    /* padding:0 10px 0 10px; */
   }
 
   nav ul {
     list-style-type:none; 
     margin: 0;
     padding:0;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   nav ul li {
@@ -242,11 +243,16 @@
   .link i {
     align-items: center;
     /* vertical-align: middle; */
-    margin-bottom:5p  x;
+    margin-bottom:5px;
   }
 
   .link:hover {
     background-color:#093052;
+  }
+
+  .polygon {
+    margin-top: -160px;
+    position: relative;
   }
 
   .workflow {
@@ -254,6 +260,7 @@
     background-repeat: no-repeat;
     background-size:auto;
     padding-bottom:50px ;
+    margin-top:-190px ;
   }
 
   .middle {
@@ -275,8 +282,6 @@
     font-family: 'geomatric';
     /* line-height:; */
     margin-top: 1px;
-
-
   }
 
   .border-container {
@@ -323,7 +328,6 @@
     background-image: linear-gradient(180deg, #FCC30F 0%, #EC4525 100%);
   }
 
-  
   .border3::after {
     content: "";
     position: absolute;
@@ -337,7 +341,6 @@
     background-image: linear-gradient(180deg, #FCC30F 0%, #EC4525 100%);
   }
 
-  
   .border4::after {
     content: "";
     position: absolute;
@@ -350,6 +353,7 @@
     border-radius: inherit;
     background-image: linear-gradient(180deg, #FCC30F 0%, #EC4525 100%);
   }
+
   
  .border1{
     background-image:url("../../image/workflow/Conclusion.png");
@@ -379,6 +383,12 @@
   background-size: 50px;
 }
 
+/* .arow{ */
+  /* margin-left: 150px; */
+  /* margin-top: 50px; */
+/*} */
+
+
 .border1,.border2,.border3,.border4,.font {
   font-size: 15px;
   text-align: center;
@@ -391,113 +401,405 @@
   -webkit-text-fill-color: transparent;
 }
 
-.page4 {
-  margin-bottom: 100px;
+.frame {
+  display:flex;
   position: relative;
- /* background: #800808; */
- width: 1349px;
- height: 1050px;
- background-size: cover;
- background-image: url("../image/Rectangle\ 16.png");
- background-repeat: no-repeat;
+  /* justify-content: center; */
+  background-image: url("../../image/Rectangle\ 16.png");
+  /* line-height: 10px; */
+  /* background-size:auto; */
+  background-repeat: no-repeat;
+  background-position:bottom;
+  padding-bottom: 100px;
+
 }
 
-.titlebar {
+ .frame h1 {
   font-size: 50px;
+  color:#02203B;
   font-weight: 900;
   text-align: center;
-  color:#02203B;
-  line-height: 150px;
 }
 
-.border-radius {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
- }
-
-.radius1,.radius2,.radius3 {
-  width: 380px;
-  height: 650px; 
-  background-color:#fbfbfb ;
-  background-repeat: no-repeat;
-  /* background-size: cover; */
-  /* align-items: center; */
-  flex-direction: column;
-  margin: 20px 30px;
-  margin-top:20px ;
-  border-radius: 30px;
-  box-shadow: 15px 15px 10px rgba(0, 0, 0, 0.25);
-}
-
-.littel-radius1,.littel-radius2,.littel-radius3 {
-  width: 315px;
-  height: 80px;
-  background-color: #FFFFFF;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.frame .box-frame {
+  display:inline;
   position: relative;
-  border-radius: 10px;
-  /* line-height: 100px; */
-  margin: 10px;
-  margin-left: 40px;
-  justify-content: center;
+}
+
+.frame .box-frame button {
+  width: 392px;
+  height: 630px;
+  background: #FFFFFF;
+  margin-bottom: 100px;
+  border: none;
+  border: 3px solid #E5E5E5;
+  border-radius: 30px;
+  margin: 30px 15px;
+  cursor: pointer;
+  left: 40px;
+  position:relative; 
+}
+
+.frame .box-frame button::before{
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -10px;
+  transform: translate(-50%, 0);
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  background-color: #E5E5E5;
+}
+
+.frame .box-frame .buton {
+  width: 320px;
+  height: 80px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  display: inline-block;
+  margin: 10px 0;
+}
+
+
+.frame .box-frame .buton:nth-child(1) h1 {
+  font-size: 25px;
+  color:#2C4C5A;
+  text-align: center;
+  /* display: none; */
+}
+
+.frame .box-frame .buton:nth-child(1)  h1 img {
+  width: auto;
+  vertical-align: middle;
+  margin: 0 20px;
   align-items: center;
 }
 
-.littel-radius1,.littel-radius2,.littel-radius3,.font1 {
-  font-size: 25px;
-  text-align: center;
-  color: #2C4C5A;
-}
-
-.font1,.icon{
-  line-height: 20px;
-  /* margin-left: 100px; */
-  vertical-align: middle;
-  margin: 10px;
-  padding: 5px;
-}
-
-.image1{
-  padding-bottom: 15px;
-  /* align-items: center; */
+.frame .box-frame button img {
+  width: auto;
+  margin-top: 10px;
 }
 
 .testi {
-  position: relative  ;
-  display: fixed;
+  /* display: block; */
+  position:relative;
+}
+
+.text-judul {
+  font-size: 30px;
+  color: #DBAB59;
+  text-align: center;
+  margin-top: -80px;
+}
+
+.text-sub {
+  font-size: 50px;
+  text-align: center;
+  font-weight: 900;
+  line-height: 16px;
+
+}
+
+.line h1 {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 900;
+  margin-left: 170px;
+  color: #02203B;
+  font-family: 'geomatric';
+  text-transform: uppercase;
+}
+
+.vertical {
+  border: 3px solid #093052;
+  border-radius: 5px;
+  height: 250px;
+  width: 0;
+  margin-left: 100px;
+}
+
+.client {
+  background-image: url("../../image/Group\ 146.png");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: top;
+  padding-bottom: 240px;
+  margin-top: -50px;
+}
+
+.client h1 {
+  font-size:50px;
+  font-family: 'geomatric';
+  font-weight: 900;
+  text-align: center;
   margin-top: 100px;
+}
+
+.container {
+  width: 100%;
+  /* height: 200px; */
+  align-items:center;
+  justify-content: center;
+}
+
+.scroll {
+  /* width: 1300px; */
+  height: 320px;
+  padding: 10px;
+  display: grid;
+  flex-flow: row;
+  overflow-x:scroll;
+  /* border-radius: 50rem; */
+  grid-auto-flow: column;
+  border: transparent;
+  /* line-height: 100px; */
+  scroll-behavior: smooth;
+}
+
+.scroll::-webkit-scrollbar {
+  display:none;
+}
+
+.box-client {
+  width:250px;
+  height: 250px;
+  margin: 0 70px;
+  border-radius: 50%;
+  position: relative;
+  border: 3px solid #2C4C5A;
+}
+
+.box-client:nth-child(9) {
+  width:250px;
+  height: 250px;
+  margin: 0 30px;
+  border-radius: 50%;
+  position: relative;
+  background-color: #131416;
+  border: 3px solid #02203B;
+}
+
+.box-client img {
+  width: 100%; 
+  height: 100%;
+  text-align: center;
+  object-fit:contain;
+  border-radius: 50%;
+}
+
+.box-client h1 {
+  color: #2C4C5A;
+  font-family:'inter';
+  font-size: 20px;
+  margin-top: 10px;
+  font-style: normal;
+  font-weight: 900;
+  text-align: center;
+  word-break: keep-all;
+}
+
+.box-client p {
+  font-size: 14px;
+  font-family: 'inter';
+  text-transform: uppercase;
+  text-align:center;
+  margin-top: -10px;
+  font-weight: 500;
+}
+
+#slide {
+  width:70px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: #02203B;
+  border: none;
+  margin-top: px;
+  margin-left: 1220px;
+}
+
+#slide i {
+  color: #FFFFFF;
+  margin-top: 0;
+  font-size: 25px;
+}
+
+.sinang-line {
+  position: relative;
+  margin-bottom: 50px;
+  margin-top: -120px;
+  margin-left: -10px;
+}
+
+.horizontal {
+  border: 1px solid #C4C4C4;
+  border-radius: 5px;
+  width:1210px;
+  height: 0;
+  /* margin-top: -5px; */
+  margin-left: 72px;
+  margin-top: 50px;
+}
+
+.sinang-line h3 {
+  font-size: 20px;
+  color: #DBAB59;
+  margin-top: -30px;
+  vertical-align: middle;
+}
+
+.sinang-line h3 img {
+  width: auto;
+  vertical-align: middle;
+  margin-left: 50px;
+}
+
+.icon {
+  position: relative;
+  margin-left: 1055px;
+  margin-top: -75px;
+}
+
+.sinang-line,.box-icon {
+  position: relative;
+}
+
+.box-icon i {
+  font-size: 25px;
+  margin: 0 15px;
+  color: #02203B;
+}
+.maps {
+  position: relative;
+}
+
+.maps,iframe {
+  width: 400px;
+  height: 400px;
+  border-radius: 15px;
+  margin-left: 20px;
   margin-bottom: 100px;
 }
 
-.jdl {
-  color: #DBAB59;
-  text-align: center;
-  font-size: 30px;
+.contact-foot {
+  display: flex;
+  float: left;
+  margin-left: 490px;
+  margin-top: -515px;
 }
 
-.jdl-1 {
-  font-size: 50px;
-  text-align: center;
+.menu-1 {
+  margin: 0 ;
+  
 }
 
-.inline {
-  position: relative;
-  /* display: grid; */
-}
-
-.ttl-line {
-  text-transform: capitalize;
+.menu-1,.our {
+  font-size: 25px;
+  font-family: 'inter';
+  font-weight: 700;
   color: #02203B;
-  font-size: 30px;
-  font-weight: 100;
 }
 
-.line {
-  border-left: 5px solid #02203B;
-  height: 205px;
-  border-radius: 5px;
-  position: absolute;
+.menu-1 ul {
+  line-height: 80px;
+  margin-left: -18px;
+  margin-top: -30px;
+}
+
+.menu-1 ul li a{
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  color: #333333;
+  font-family: 'inter';
+}
+
+.menu-2 {
+  margin: 0 70px;
+}
+
+.menu-2,.ser {
+  font-size: 25px;
+  font-family: 'inter';
+  font-weight: 700;
+  color: #02203B;
+  margin-top: 15px;
+}
+
+.menu-2 ul {
+  line-height: 78px;
+  margin-left: -18px;
+  margin-top: -30px;
+}
+
+.menu-2 ul li a {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  color: #333333;
+  font-family: 'inter';
+}
+
+.menu-3 {
+  margin: 0 0;
+  /* display: block; */
+  position: relative;
+}
+
+.menu-3 h3 {
+  font-size: 25px;
+  color: #02203B;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.menu-3 p {
+  font-size: 20px;
+  line-height: 38px;
+}
+
+.menu-3 button {
+  width: 250px;
+  height: 65px;
+  background-color: #02203B;
+  border: none;
+  border-radius: 10px;
+  margin-top: 15px;
+}
+
+.menu-3 button a {
+  font-size: 15px;
+  color: #FFFFFF;
+  display: flex;
+  line-height: 50px;
+}
+
+.btn1 {
+  width: 45px;
+  height: 45px;
+  border: 2px solid #FFFFFF;
+  border-radius:5px ;
+  margin-left: 85px;
+}
+
+.btn1 i {
+  font-size: 35px;
+}
+
+i {
+  line-height: 10px;
+  margin-top: 5px;
+  /* align-items: center; */
+}
+
+footer {
+  background-color: #02203B;
+  height: 40px;
+}
+
+footer h3 {
+  color: #FFFFFF;
   margin-left: 100px;
-  top: 60px;
+  line-height: 40px;
 }
