--- a/Asset/css/style.css
+++ b/Asset/css/style.css
@@ -49,7 +49,8 @@
   }
 
   nav {
-    width: 100%;
+    width: 100%;  
+    height: 13vh;
     margin: auto;
     display: flex !important;
     line-height: 80px;
@@ -64,7 +65,6 @@
 
   nav.scrollink-active {
     background-color: #02203B;
-    /* padding:0 10px 0 10px; */
   }
 
   nav ul {
@@ -90,7 +90,29 @@
 
   nav ul li a:hover {
     /* text-decoration: underline; */
-    color: white;
+    color: #ffffff;
+  }
+
+ nav ul li a::after {
+    content: "";
+    display: flex;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 0 40px;
+    margin-top: -30px;
+    align-items: center;
+    justify-content: center;
+    background-color: #C38D43;
+    transform: translate(-150%);
+    transition: all 0.3s ease;
+  }
+
+
+  nav ul li a:hover::after {
+    transform: translate(150%);
+    /* transform:translateX(10%); */
   }
 
   .type {
@@ -452,6 +474,26 @@
   background-color: #E5E5E5;
 }
 
+.frame .box-frame button:hover::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -10px;
+  transform: translate(-50%, 0);
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  background:linear-gradient(180deg,  #DE9E45 0%, #02203B 100%);
+}
+
+.frame .box-frame button:hover {
+  width: 393px;
+  height: 630px;
+  border: 3px solid;
+  border-radius: 30px;
+  border-image: linear-gradient(to right, 180deg, #DE9E45 0%, #02203B 100% );
+}
+
 .frame .box-frame .buton {
   width: 320px;
   height: 80px;
@@ -546,7 +588,7 @@
 
 .scroll {
   /* width: 1300px; */
-  height: 320px;
+  height:350px;
   padding: 10px;
   display: grid;
   flex-flow: row;
@@ -563,17 +605,26 @@
 }
 
 .box-client {
-  width:250px;
-  height: 250px;
+  width:200px;
+  height:200px;
   margin: 0 70px;
   border-radius: 50%;
   position: relative;
+  padding: 25px;
+  /* overflow: hidden; */
   border: 3px solid #2C4C5A;
 }
 
+/* .box-client:nth-child(5) {
+  /* overflow: hidden; */
+  /* width: 200px;
+  height: 200px;
+  padding:15px;
+}  */
+
 .box-client:nth-child(9) {
-  width:250px;
-  height: 250px;
+  width:200px;
+  height: 200px;
   margin: 0 30px;
   border-radius: 50%;
   position: relative;
@@ -586,14 +637,14 @@
   height: 100%;
   text-align: center;
   object-fit:contain;
-  border-radius: 50%;
+  /* border-radius: 40%; */
 }
 
 .box-client h1 {
   color: #2C4C5A;
   font-family:'inter';
   font-size: 20px;
-  margin-top: 10px;
+  margin-top: 40px;
   font-style: normal;
   font-weight: 900;
   text-align: center;
@@ -615,7 +666,7 @@
   border-radius: 5px;
   background-color: #02203B;
   border: none;
-  margin-top: px;
+  /* margin-top: -180px; */
   margin-left: 1220px;
 }
 
@@ -628,7 +679,7 @@
 .sinang-line {
   position: relative;
   margin-bottom: 50px;
-  margin-top: -120px;
+  margin-top: -160px;
   margin-left: -10px;
 }
 
@@ -679,14 +730,14 @@
   height: 400px;
   border-radius: 15px;
   margin-left: 20px;
-  margin-bottom: 100px;
+  margin-bottom: 25px;
 }
 
 .contact-foot {
   display: flex;
   float: left;
   margin-left: 490px;
-  margin-top: -515px;
+  margin-top: -450px;
 }
 
 .menu-1 {
@@ -793,6 +844,13 @@ i {
   /* align-items: center; */
 }
 
+.alamat p {
+  font-size:15px;
+  font-family: 'inter';
+  /* margin-top: -70px;  */
+  margin-left: 35px;
+}
+
 footer {
   background-color: #02203B;
   height: 40px;
@@ -800,6 +858,34 @@ footer {
 
 footer h3 {
   color: #FFFFFF;
-  margin-left: 100px;
+  margin-left: 10vh;
   line-height: 40px;
 }
+
+/* @media screen and (max-width:1200px){
+  #header {
+    /* background-image: url("../../image/header.png"); */
+    /* background-repeat: no-repeat;
+    background-attachment:inherit;
+    /* background-position:top; */
+    /* background-size: contain;
+  } */ 
+  /* .wrapper {
+    width:auto;
+    margin: auto;
+    position: static;
+  }  */
+
+  /* nav {
+    width:100%;
+    margin: auto;
+    display: flex;
+    line-height: 50px;
+    position: relative;
+    position: -webkit-sticky;
+    background:transparent;
+    top: 0;
+    z-index: 1;
+    transition: all 0.3s ease;
+  } */
+/* } */
